iroha_telemetry/derive/tests/ui_fail/no_args.stderr
error: Function must have at least one argument of type `StateTransaction` or `StateReadOnly`.
 --> tests/ui_fail/no_args.rs:4:1
  |
4 | fn execute() -> Result<(), ()> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
